# parameteroptimization

./: CMakeLists.txt  Common.cpp  Common.h  EllipseFitterModel.cpp  EllipseFitterModel.h  Grid3D.cpp  GridFitterModel.cpp  GridFitterModel.h  LICENSE  LocalizerModel.cpp  LocalizerModel.h  OptimizationModel.cpp  OptimizationModel.h  README.md  main.cpp  main.h
legacy/: Grid3D.cpp  Grid3D.h
parameteroptimization/: CMakeLists.txt  Common.h  EllipseFitterModel.h  Grid3D.h  GridFitterModel.h  LocalizerModel.h  OptimizationModel.h  StdioHandler.h  main.h
parameteroptimization/src/: Common.cpp  EllipseFitterModel.cpp  Grid3D.cpp  GridFitterModel.cpp  LocalizerModel.cpp  OptimizationModel.cpp  StdioHandler.cpp  main.cpp
